# biokey

./: .dockerignore  NOTICE.txt  README.md  biokey.sublime-project  manage.sh
.github/ISSUE_TEMPLATE/: ---requirement.md
.github/workflows/: imaging.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.py
src/jpl.edrn.biokey.content/: README.md  pyproject.toml
src/jpl.edrn.biokey.content/src/jpl/edrn/biokey/content/: __init__.py  apps.py  models.py  settings.py
src/jpl.edrn.biokey.content/src/jpl/edrn/biokey/content/migrations/: 0001_initial.py  0002_alter_flexpage_body.py  0003_flexpage_search_image_alter_flexpage_body.py  0004_homepage.py
src/jpl.edrn.biokey.content/src/jpl/edrn/biokey/content/templates/jpl.edrn.biokey.content/: flex-page.html  home-page.html
src/jpl.edrn.biokey.content/src/jpl/edrn/biokey/content/templatetags/: __init__.py
src/jpl.edrn.biokey.policy/: README.md  pyproject.toml
src/jpl.edrn.biokey.policy/src/jpl/edrn/biokey/policy/: __init__.py  apps.py  celery.py  urls.py  wagtail_hooks.py  wsgi.py
src/jpl.edrn.biokey.policy/src/jpl/edrn/biokey/policy/management/: __init__.py
src/jpl.edrn.biokey.policy/src/jpl/edrn/biokey/policy/management/commands/: __init__.py  biokey_bloom.py  exercise_email.py  worker.py
src/jpl.edrn.biokey.policy/src/jpl/edrn/biokey/policy/settings/: __init__.py  base.py  dev.py  ldap.py  ops.py
src/jpl.edrn.biokey.streams/: README.md  pyproject.toml
src/jpl.edrn.biokey.streams/src/jpl/edrn/biokey/streams/: __init__.py  apps.py  blocks.py
src/jpl.edrn.biokey.streams/src/jpl/edrn/biokey/streams/migrations/: 0001_initial.py
src/jpl.edrn.biokey.theme/: README.md  pyproject.toml
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/: __init__.py  _settings.py  apps.py  models.py  settings.py
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/migrations/: 0001_initial.py  0002_remove_colophonsettings_site_editor_and_more.py
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/static/jpl.edrn.biokey.theme/css/: overlay.css
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/templates/: base.html
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/templates/includes/: footer.html
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/templates/jpl.edrn.biokey.theme/: colophon.html
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/templates/wagtailadmin/: skeleton.html
src/jpl.edrn.biokey.theme/src/jpl/edrn/biokey/theme/templatetags/: __init__.py  biokey_theme_tags.py
src/jpl.edrn.biokey.usermgmt/: README.md  pyproject.toml
src/jpl.edrn.biokey.usermgmt/src/jpl/edrn/biokey/usermgmt/: __init__.py  _changepw.py  _dits.py  _forgotten.py  _forms.py  _ldap.py  _passwords.py  _paths.py  _settings.py  _signup.py  _theme.py  _users.py  apps.py  constants.py  models.py  settings.py  tasks.py  urls.py  views.py
src/jpl.edrn.biokey.usermgmt/src/jpl/edrn/biokey/usermgmt/migrations/: 0001_initial.py  0002_alter_edrndirectoryinformationtree_dmcc_managed_email_template.py  0002_datainformationtree_manager_dn_and_more.py  0003_alter_emailsettings_new_users_addresses.py  0003_rename_datainformationtree_directoryinformationtree.py  0004_directoryinformationtree_creation_notification_template_and_more.py  0004_directoryinformationtree_user_base.py  0005_directoryinformationtree_approval_template_and_more.py  0005_directoryinformationtree_user_scope.py  0006_alter_directoryinformationtree_user_scope.py  0006_directoryinformationtree_acceptance_group.py  0007_alter_directoryinformationtree_approval_template_and_more.py  0007_directoryinformationtree_group_base_and_more.py  0008_edrndirectoryinformationtree.py  0009_namerequestformpage.py  0010_emailsettings.py  0011_forgottendetailsformpage.py  0012_emailsettings_new_users_addresses.py  0013_passwordsettings.py  0014_directoryinformationtree_creation_email_template_and_more.py  0015_directoryinformationtree_help_address.py  0016_directoryinformationtree_forgotten_uid_template_and_more.py  0017_passwordchangeformpage_and_more.py  0018_alter_edrndirectoryinformationtree_dmcc_managed_email_template.py  0019_directoryinformationtree_logo.py  0020_directoryinformationtree_page_title.py
src/jpl.edrn.biokey.usermgmt/src/jpl/edrn/biokey/usermgmt/templates/jpl.edrn.biokey.usermgmt/: account-created.html  dit.html  dmcc-password-change-required.html  form-rendering.html  form.html  label-rendering.html  password-changed.html  password-reset-email-sent.html  password-reset-success.html  potential-emails.html  uid-reminder-email-sent.html
src/jpl.edrn.biokey.usermgmt/src/jpl/edrn/biokey/usermgmt/templatetags/: __init__.py  biokey_usermgmt_filters.py
src/jpl.wagtail.bootstrap/: README.md  pyproject.toml
src/jpl.wagtail.bootstrap/src/jpl/wagtail/bootstrap/: __init__.py  apps.py  settings.py
src/jpl.wagtail.bootstrap/src/jpl/wagtail/bootstrap/static/jpl.wagtail.bootstrap/css/: overlay.css
src/jpl.wagtail.bootstrap/src/jpl/wagtail/bootstrap/templates/: base.html
src/jpl.wagtail.bootstrap/src/jpl/wagtail/bootstrap/templates/wagtailadmin/: 404.html  base.html  login.html
src/jpl.wagtail.bootstrap/src/jpl/wagtail/bootstrap/templatetags/: __init__.py
support/: deploy.sh  devrebuild.sh
