[project]
name = 'jpl.edrn.biokey.theme'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'django < 5',
    'wagtail < 6'
]
authors = [
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = 'Wagtail theme for JPL EDRN BioKey application'
readme = 'README.md'
keywords = ['wagtail', 'bootstrap', 'theme', 'cancer', 'biomarker', 'password']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.optional-dependencies]


[project.urls]
Homepage = 'https://github.com/EDRN/biokey'
Issues = 'https://github.com/EDRN/biokey/issues'


[project.scripts]


[tool.hatch.version]
path = 'src/jpl/edrn/biokey/theme/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']


[tool.hatch.metadata]
allow-direct-references = true


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
