[project]
name = 'jpl.edrn.biokey.usermgmt'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'celery ~= 5.2.7',
    'django < 5',
    'django-recaptcha ~= 3.0.0',
    'humanize ~= 4.9.0',
    'django-widget-tweaks ~= 1.4.12',
    'wagtail < 6',
    'wagtail-django-recaptcha ~= 1.0'
]
authors = [
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = 'User registration and password changes for BioKey, user profile management for LabCAS and the Early Detection Research Network'
readme = 'README.md'
keywords = ['wagtail', 'user', 'password', 'edrn', 'labcas', 'cancer', 'nih', 'nci', 'jpl', 'nasa']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.optional-dependencies]


[project.urls]
Homepage = 'https://github.com/EDRN/biokey'
Issues = 'https://github.com/EDRN/biokey/issues'


[project.scripts]


[tool.hatch.version]
path = 'src/jpl/edrn/biokey/usermgmt/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']


[tool.hatch.metadata]
allow-direct-references = true


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
