[project]
name = 'jpl.wagtail.bootstrap'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'django < 5',
    'wagtail < 6'
]
authors = [
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = 'Quick and dirty Bootstrap-based theme for Wagtail'
readme = 'README.md'
keywords = ['wagtail', 'bootstrap', 'theme']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.optional-dependencies]


[project.urls]
Homepage = 'https://github.com/EDRN/biokey'
Issues = 'https://github.com/EDRN/biokey/issues'


[project.scripts]


[tool.hatch.version]
path = 'src/jpl/wagtail/bootstrap/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']


[tool.hatch.metadata]
allow-direct-references = true


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
